# cpp-template

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  README_dependencies.md  README_docker.md
.devcontainer/: Dockerfile  devcontainer.json  setup-novnc.sh
.github/actions/setup_cache/: action.yml
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml
cmake/: StaticAnalyzers.cmake
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/gl_tutorial/: CMakeLists.txt  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  controls.cpp  main.cpp  shader.cpp
src/sample_library/: CMakeLists.txt
